# hcp_subcortical_repro

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_multipanel.txt
etc/: hcp_processing.md
notebooks/: subcortical_viz_tracts.ipynb
