[tool.poetry]
name = "hcp-subcortical-analysis"
version = "0.1.0"
description = "Repo for performing subcortico-subcortical tractography analysis"
authors = ["Jason Kai <tkai@uwo.ca>"]

[tool.poetry.dependencies]
python = "~3.8"
dill = "~0.3.1.1"
dipy = "~1.4.0"
fury = "~0.6.1"
joblib = "~0.11"
matplotlib = "~3.3.4"
nibabel = "~3.2.1"
numpy = "~1.19.2"
pandas = "~1.0.3"
pingouin = "~0.3.4"
scipy = "~1.4.1"
seaborn = "~0.11.0"
tqdm = "~4.56.0"
mne = "^0.24.0"
ipympl = "^0.8.2"

[tool.poetry.group.analysis.dependencies]
jupyter = "^1.0"
jupyterlab = "^3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
